k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: apivendas.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apivendasservice
                port:
                  number: 8080
